# pascal_o_r_mapping

./: .gitignore  .gitmodules  Databases.db  INSTALL.txt  Norme_de_Nommage_pour_LLM.md  Norme_de_codage_pour_LLM.md  README.txt  README.txt~  doc.odt  git_effacer_un_fichier_du_repository.txt  index.html  uNorme_de_Nommage.pas
GPL/: uCode_barre_pdf417.pas
Generation_de_code/: Génération_de_code.txt  ufAutomatic.lfm  ufAutomatic.pas  ufAutomatic_Genere_tout_sl.lfm  ufAutomatic_Genere_tout_sl.pas  ufAutomatic_VST.lfm  ufAutomatic_VST.pas  uhAutomatic_AUT.pas
OOo/: uOD.pas  uOD_Table_Batpro.pas  ufOOo.dfm  ufOOo.pas  ufOOo_NomFichier_Modele.dfm
base_SQLite3/: jsWorks.sqlite
couture/: Notes.fodg  Notes.odg
delphi_10.2_FMX/: LGPL_banner.txt
documentation/: 2017_06_26_Migration_jsDataContexte.txt
jsCiel/: js_jsCiel.js  js_jsCiel.js.map
jsFrequences/: index.html  jsFrequences.js
jsTuneTrainer/: index.html  jsTuneTrainer.js  jsTuneTrainer.js.map  meld.bat
jsWorks/: .gitignore  Calendrier.ott  Session.ott  http_PortMapper  http_PortMapper.lpi  http_PortMapper.lpr  http_PortMapper_linux  http_PortMapper_linux.lpi  http_PortMapper_linux.lpr  http_PortMapper_linux.lps  http_jsWorks  http_jsWorks.bat  http_jsWorks.lpi  http_jsWorks.lpr  http_jsWorks.lps  http_jsWorks.or  http_jsWorks_linux.lpr  http_jsWorks_linux.lps  http_jsWorks_linux.or  http_jsWorks_mswindows.lpi  http_jsWorks_mswindows.lpr  (+84 more)
tools/test_rust/test_rust_lib/: Cargo.toml  build.rs  install_cbindgen_for_c_headers.bat  run_cbindgen.bat  test_rust_lib.h
tools/test_rust/test_rust_lib/src/: lib.rs
(+5728 files in other folders)
