[package]
name = "test_rust_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.141"

[build-dependencies]
#cbindgen = "0.4"
#syn={ version="2.0", features = ["full"] }

[lib]
crate-type= ["cdylib"]
